// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`translation catalog initialization should be initialized with default values 1`] = `
"# SOME DESCRIPTIVE TITLE
# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
# This file is distributed under the same license as the PACKAGE package.
# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
# 
#, fuzzy
msgid \\"\\"
msgstr \\"\\"
\\"Project-Id-Version: PACKAGE VERSION\\\\n\\"
\\"Report-Msgid-Bugs-To: MSGID_BUGS_ADDRESS\\\\n\\"
\\"POT-Creation-Date: 2020-04-23 08:50+0300\\\\n\\"
\\"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\\\\n\\"
\\"Last-Translator: FULL NAME <EMAIL@ADDRESS>\\\\n\\"
\\"Language-Team: LANGUAGE <LL@li.org>\\\\n\\"
\\"Language:\\\\n\\"
\\"MIME-Version: 1.0\\\\n\\"
\\"Content-Type: text/plain; charset=CHARSET\\\\n\\"
\\"Content-Transfer-Encoding: 8bit\\\\n\\"
"
`;

exports[`translation catalog initialization should honor the foreign-user option 1`] = `
"# SOME DESCRIPTIVE TITLE
# This file is put in the public domain.
# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
# 
#, fuzzy
msgid \\"\\"
msgstr \\"\\"
\\"Project-Id-Version: PACKAGE VERSION\\\\n\\"
\\"Report-Msgid-Bugs-To: MSGID_BUGS_ADDRESS\\\\n\\"
\\"POT-Creation-Date: 2020-04-23 08:50+0300\\\\n\\"
\\"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\\\\n\\"
\\"Last-Translator: FULL NAME <EMAIL@ADDRESS>\\\\n\\"
\\"Language-Team: LANGUAGE <LL@li.org>\\\\n\\"
\\"Language:\\\\n\\"
\\"MIME-Version: 1.0\\\\n\\"
\\"Content-Type: text/plain; charset=CHARSET\\\\n\\"
\\"Content-Transfer-Encoding: 8bit\\\\n\\"
"
`;

exports[`translation catalog initialization should honor the from-code option 1`] = `
"# SOME DESCRIPTIVE TITLE
# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
# This file is distributed under the same license as the PACKAGE package.
# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
# 
#, fuzzy
msgid \\"\\"
msgstr \\"\\"
\\"Project-Id-Version: PACKAGE VERSION\\\\n\\"
\\"Report-Msgid-Bugs-To: MSGID_BUGS_ADDRESS\\\\n\\"
\\"POT-Creation-Date: 2020-04-23 08:50+0300\\\\n\\"
\\"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\\\\n\\"
\\"Last-Translator: FULL NAME <EMAIL@ADDRESS>\\\\n\\"
\\"Language-Team: LANGUAGE <LL@li.org>\\\\n\\"
\\"Language:\\\\n\\"
\\"MIME-Version: 1.0\\\\n\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Content-Transfer-Encoding: 8bit\\\\n\\"
"
`;

exports[`translation catalog initialization should honor the msgid-bugs-address option 1`] = `
"# SOME DESCRIPTIVE TITLE
# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
# This file is distributed under the same license as the PACKAGE package.
# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
# 
#, fuzzy
msgid \\"\\"
msgstr \\"\\"
\\"Project-Id-Version: PACKAGE VERSION\\\\n\\"
\\"Report-Msgid-Bugs-To: me@example.com\\\\n\\"
\\"POT-Creation-Date: 2020-04-23 08:50+0300\\\\n\\"
\\"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\\\\n\\"
\\"Last-Translator: FULL NAME <EMAIL@ADDRESS>\\\\n\\"
\\"Language-Team: LANGUAGE <LL@li.org>\\\\n\\"
\\"Language:\\\\n\\"
\\"MIME-Version: 1.0\\\\n\\"
\\"Content-Type: text/plain; charset=CHARSET\\\\n\\"
\\"Content-Transfer-Encoding: 8bit\\\\n\\"
"
`;

exports[`translation catalog initialization should honor the package option 1`] = `
"# SOME DESCRIPTIVE TITLE
# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
# This file is distributed under the same license as the PACKAGE package.
# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
# 
#, fuzzy
msgid \\"\\"
msgstr \\"\\"
\\"Project-Id-Version: foobar VERSION\\\\n\\"
\\"Report-Msgid-Bugs-To: MSGID_BUGS_ADDRESS\\\\n\\"
\\"POT-Creation-Date: 2020-04-23 08:50+0300\\\\n\\"
\\"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\\\\n\\"
\\"Last-Translator: FULL NAME <EMAIL@ADDRESS>\\\\n\\"
\\"Language-Team: LANGUAGE <LL@li.org>\\\\n\\"
\\"Language:\\\\n\\"
\\"MIME-Version: 1.0\\\\n\\"
\\"Content-Type: text/plain; charset=CHARSET\\\\n\\"
\\"Content-Transfer-Encoding: 8bit\\\\n\\"
"
`;

exports[`translation catalog initialization should honor the version option 1`] = `
"# SOME DESCRIPTIVE TITLE
# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
# This file is distributed under the same license as the PACKAGE package.
# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
# 
#, fuzzy
msgid \\"\\"
msgstr \\"\\"
\\"Project-Id-Version: PACKAGE 23.4.89\\\\n\\"
\\"Report-Msgid-Bugs-To: MSGID_BUGS_ADDRESS\\\\n\\"
\\"POT-Creation-Date: 2020-04-23 08:50+0300\\\\n\\"
\\"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\\\\n\\"
\\"Last-Translator: FULL NAME <EMAIL@ADDRESS>\\\\n\\"
\\"Language-Team: LANGUAGE <LL@li.org>\\\\n\\"
\\"Language:\\\\n\\"
\\"MIME-Version: 1.0\\\\n\\"
\\"Content-Type: text/plain; charset=CHARSET\\\\n\\"
\\"Content-Transfer-Encoding: 8bit\\\\n\\"
"
`;
